src/Components/FeedFilters/style.css
.feed-filters {

    padding: 1rem;
    margin: 2rem;

    display: flex;

    flex-wrap: wrap;

    margin-bottom: 0;
}

.feed-filters .feed-filter {
    
    padding: 2px 8px;
    margin-right: 1rem;
    margin-bottom: 1rem;
    
    border: 1px solid rgb(200, 200, 200);
    border-radius: 8px;
    
    min-width: 160px;
    min-height: 42px;

    display: flex;
    align-items: center;
    justify-content: flex-start;

    position: relative;

}

.feed-filter-placeholder {
    color: darkgray;
}

.feed-filter-selected {
    padding: 6px;
}

.feed-filter-title {
    text-align: start;
    padding-left: 4px;
    font-size: 12px;
    color: rgb(178, 178, 178);
    min-height: 16px;
}

.feed-filter-selected-box {
    background-color: rgb(213, 213, 213);
    border-radius: 4px;
    display: flex;
    align-items: center;
    margin: 0 4px;
}

.feed-filter-selected-box-cross {
    padding: 3px;
    display: flex;
}

.feed-filter-selected-box-cross:hover {
    background-color: rgba(255, 0, 0, 0.256);
    cursor: pointer;
}

p.feed-filter-selected, .filter-options > p {
    text-transform: capitalize;
    font-size: 14px;
}

.feed-selection-box {
    flex: 1;
    text-align: start;
    display: flex;
    align-items: center;
    justify-content: flex-start;
}

.filter-arrow {
    width: 20px;
    height: 20px;
    /* border: 1px solid gray; */
    margin-left: 12px;
    cursor: pointer;
}

.filter-options {
    width: 100%;
    max-height: 300px;
    background: white;

    position: absolute;
    top: 120%;
    left: 0px;

    overflow: scroll;

    text-align: start;

    z-index: 999;

    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
}

.filter-options p {
    padding: 8px;
    cursor: pointer;
}


@media screen and (max-width: 750px) {
    .feed-filters {
        margin: 1rem;
    }
}

@media screen and (max-width: 600px) {
    .feed-filters {
        flex-direction: column;
    }
}

